// Architecture UML — orchestration + fleets + callbacks layers.
//
// This is NOT a real database schema.  Models = classes.  Relations = arrows.
// View with the Prisma UML extension to see the picture.

generator client {
  provider = "prisma-client-js"
}

datasource db {
  provider = "postgresql"
  url      = env("DATABASE_URL")
}

// =========================================================
// Layer 1 — Core types (data contracts)
// =========================================================

model AvailableResources {
  id                     Int                @id @default(autoincrement())
  serverlessInFlight     Json
  communityMachines      CommunityMachine[]
  serverlessCapabilities FleetCapability[]
  usedByLifecycle        RenderLifecycle[]
  consumedByAllocators   FrameAllocator[]
}

model CommunityMachine {
  id           Int                @id @default(autoincrement())
  machineId    String
  gpuModel     String
  gpuVramGb    Float
  renderSpeed  Float
  resources    AvailableResources @relation(fields: [resourcesId], references: [id])
  resourcesId  Int
}

model FleetCapability {
  id               Int                @id @default(autoincrement())
  fleet            String
  gpuType          String
  label            String
  vramGb           Float
  renderSpeed      Float
  fleetMaxParallel Int
  resources        AvailableResources @relation(fields: [resourcesId], references: [id])
  resourcesId      Int
}

model PlannedTask {
  id          Int             @id @default(autoincrement())
  fleet       String
  machineId   String?
  gpuType     String?
  label       String
  vramGb      Float
  renderSpeed Float
  frameStart  Int
  frameEnd    Int
  frameStep   Int
  totalFrames Int
  chunkIndex  Int?
  attempt     Int
  producedBy  FrameAllocator? @relation(fields: [allocatorId], references: [id])
  allocatorId Int?
}

model ChunkRequest {
  id                             Int             @id @default(autoincrement())
  groupId                        String
  chunkIndex                     Int
  attempt                        Int
  frameStart                     Int
  frameEnd                       Int
  frameStep                      Int
  totalFrames                    Int
  excludedMachineIds             String[]
  excludedServerlessCapabilities String[]
  fileSizeBytes                  BigInt?
  consumedByAllocator            FrameAllocator? @relation(fields: [allocatorId], references: [id])
  allocatorId                    Int?
}

// =========================================================
// Layer 2 — Orchestration (the brain)
// =========================================================

model RenderOrchestrator {
  id              Int              @id @default(autoincrement())
  lifecycle       RenderLifecycle  @relation(fields: [lifecycleId], references: [id])
  lifecycleId     Int              @unique
  failureHandlers FailureHandler[]
}

model RenderLifecycle {
  id                   Int                          @id @default(autoincrement())
  orchestrator         RenderOrchestrator?
  defaultStrategy      DefaultAllocationStrategy    @relation(fields: [defaultStrategyId], references: [id])
  defaultStrategyId    Int                          @unique
  fastRenderStrategy   FastRenderAllocationStrategy @relation(fields: [fastRenderStrategyId], references: [id])
  fastRenderStrategyId Int                          @unique
  coordinator          DispatchCoordinator          @relation(fields: [coordinatorId], references: [id])
  coordinatorId        Int                          @unique
  fleetRegistry        FleetRegistry                @relation(fields: [fleetRegistryId], references: [id])
  fleetRegistryId      Int                          @unique
  resources            AvailableResources?          @relation(fields: [resourcesId], references: [id])
  resourcesId          Int?
}

// FrameAllocator is a Protocol.  Two concrete strategies realize it.
model FrameAllocator {
  id             Int                           @id @default(autoincrement())
  defaultImpl    DefaultAllocationStrategy?
  fastImpl       FastRenderAllocationStrategy?
  outputs        PlannedTask[]
  retryInputs    ChunkRequest[]
  resourceInputs AvailableResources[]
}

model DefaultAllocationStrategy {
  id               Int              @id @default(autoincrement())
  realizes         FrameAllocator   @relation(fields: [frameAllocatorId], references: [id])
  frameAllocatorId Int              @unique
  usedByLifecycle  RenderLifecycle?
  registry         FleetRegistry    @relation(fields: [registryId], references: [id])
  registryId       Int
}

model FastRenderAllocationStrategy {
  id               Int              @id @default(autoincrement())
  realizes         FrameAllocator   @relation(fields: [frameAllocatorId], references: [id])
  frameAllocatorId Int              @unique
  usedByLifecycle  RenderLifecycle?
  registry         FleetRegistry    @relation(fields: [registryId], references: [id])
  registryId       Int
}

model DispatchCoordinator {
  id              Int               @id @default(autoincrement())
  usedByLifecycle RenderLifecycle?
  dispatcher      Dispatcher        @relation(fields: [dispatcherId], references: [id])
  dispatcherId    Int               @unique
  successHandlers SuccessHandler[]
  failureHandlers FailureHandler[]
}

model Dispatcher {
  id          Int                  @id @default(autoincrement())
  coordinator DispatchCoordinator?
  registry    FleetRegistry        @relation(fields: [registryId], references: [id])
  registryId  Int
}

// =========================================================
// Layer 3 — Fleets (the muscle)
// =========================================================

model FleetRegistry {
  id                Int                            @id @default(autoincrement())
  usedByLifecycle   RenderLifecycle?
  usedByDispatchers Dispatcher[]
  defaultStrategies DefaultAllocationStrategy[]
  fastStrategies    FastRenderAllocationStrategy[]
  fleetStrategies   IFleetStrategy[]
}

// IFleetStrategy is a Protocol.  Three concrete fleets realize it.
model IFleetStrategy {
  id            Int                 @id @default(autoincrement())
  registry      FleetRegistry       @relation(fields: [registryId], references: [id])
  registryId    Int
  modalImpl     ModalFleetStrategy?
  vastImpl      VastFleetStrategy?
  communityImpl CommunityStrategy?
}

model ModalFleetStrategy {
  id          Int             @id @default(autoincrement())
  realizes    IFleetStrategy  @relation(fields: [interfaceId], references: [id])
  interfaceId Int             @unique
  monitor     ModalJobMonitor @relation(fields: [monitorId], references: [id])
  monitorId   Int             @unique
}

model VastFleetStrategy {
  id          Int                @id @default(autoincrement())
  realizes    IFleetStrategy     @relation(fields: [interfaceId], references: [id])
  interfaceId Int                @unique
  poller      VastInstancePoller @relation(fields: [pollerId], references: [id])
  pollerId    Int                @unique
}

model CommunityStrategy {
  id          Int              @id @default(autoincrement())
  realizes    IFleetStrategy   @relation(fields: [interfaceId], references: [id])
  interfaceId Int              @unique
  monitor     CommunityMonitor @relation(fields: [monitorId], references: [id])
  monitorId   Int              @unique
}

model ModalJobMonitor {
  id      Int                 @id @default(autoincrement())
  ownedBy ModalFleetStrategy?
}

model VastInstancePoller {
  id      Int                @id @default(autoincrement())
  ownedBy VastFleetStrategy?
}

model CommunityMonitor {
  id      Int                @id @default(autoincrement())
  ownedBy CommunityStrategy?
}

// =========================================================
// Layer 4 — Callbacks (the ears)
// =========================================================

model CallbackRouter {
  id       Int                @id @default(autoincrement())
  handlers ICallbackHandler[]
}

// ICallbackHandler is a Protocol.  Two concrete handlers realize it.
model ICallbackHandler {
  id        Int                   @id @default(autoincrement())
  router    CallbackRouter        @relation(fields: [routerId], references: [id])
  routerId  Int
  modalImpl ModalCallbackHandler?
  vastImpl  VastCallbackHandler?
}

model ModalCallbackHandler {
  id          Int              @id @default(autoincrement())
  realizes    ICallbackHandler @relation(fields: [interfaceId], references: [id])
  interfaceId Int              @unique
}

model VastCallbackHandler {
  id          Int              @id @default(autoincrement())
  realizes    ICallbackHandler @relation(fields: [interfaceId], references: [id])
  interfaceId Int              @unique
}

model SuccessHandler {
  id            Int                 @id @default(autoincrement())
  coordinator   DispatchCoordinator @relation(fields: [coordinatorId], references: [id])
  coordinatorId Int
}

model FailureHandler {
  id             Int                 @id @default(autoincrement())
  coordinator    DispatchCoordinator @relation(fields: [coordinatorId], references: [id])
  coordinatorId  Int
  orchestrator   RenderOrchestrator? @relation(fields: [orchestratorId], references: [id])
  orchestratorId Int?
}
